update Load Model message

--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,7 @@
   <!-- loading gif -->
 <div id="loading" style="display:none; width:100%; text-align:center;">
   <iframe src="https://giphy.com/embed/RgzryV9nRCMHPVVXPV" width="20%" height="20%" style="display:inline-block; margin: 0 auto;" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
-  <h3 style= "color: red"> LOADING MODEL </h3>
+  <h3 style= "color: red"> LOADING MODEL (takes ~ 1 minute) </h3>
 </div>
  
 
